--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,6 +1,6 @@
 PORT=8081
 HASURA_GRAPHQL_URL=https://your-hasura-service.onrender.com/v1/graphql
-HASURA_GRAPHQL_ADMIN_SECRET=your_secure_production_secret
+HASURA_GRAPHQL_ADMIN_SECRET=mysupersecretkey
 JWT_SECRET=my_super_secret_key_that_is_at_least_32_chars
 
 # Supabase Storage (for images)
@@ -13,5 +13,5 @@ CHAPA_SECRET_KEY=CHASECK_TEST-QCh5tJKwqRBk84EtNS7p6ShlvqDLWIbq
 CHAPA_PUBLIC_KEY=CHAPUBK_TEST-L2LbZMxqZdIP7edOYJFHhqwBLqdYuF2i
 CHAPA_WEBHOOK_SECRET=lancetproverbs
 CHAPA_BASE_URL=https://api.chapa.co
-CHAPA_WEBHOOK_URL=https://your-go-backend.onrender.com
-FRONTEND_URL=http://localhost:3000
+CHAPA_WEBHOOK_URL=https://your-go-backend.onrailway.com
+FRONTEND_URL=http://my-frontend.vercel.pp
