--- a/backend/docker/hasura/.env
+++ b/backend/docker/hasura/.env
@@ -4,7 +4,7 @@ POSTGRES_PASSWORD=lancetdb
 POSTGRES_DB=spatuladb
 
 # Hasura Environment Variables
-HASURA_GRAPHQL_DATABASE_URL=postgres://postgres:lancetdb@postgres:5432/spatuladb
+HASURA_GRAPHQL_DATABASE_URL=postgresql://postgres:lancetdbsupabasedb@db.inyvjefytsezzgwnuopy.supabase.co:5432/postgres
 HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey
 # You can add more here later, like JWT secret
 # docker/hasura/.env
