--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,10 +1,10 @@
-FROM golang:1.21-alpine
-
+FROM golang:1.22 AS builder
 WORKDIR /app
-COPY go.mod go.sum ./
-RUN go mod download
 COPY . .
-RUN go build -o main ./cmd/server
+RUN go build -o server .
 
-EXPOSE 8081
-CMD ["./main"]
+FROM debian:bullseye-slim
+WORKDIR /app
+COPY --from=builder /app/server .
+EXPOSE 8080
+CMD ["./server"]
