--- a/railway.toml
+++ b/railway.toml
@@ -14,7 +14,7 @@ deploy {
 [services.variables]
 PORT = "8081"
 HASURA_GRAPHQL_URL = "https://your-hasura.up.railway.app/v1/graphql"
-HASURA_GRAPHQL_ADMIN_SECRET = "your_super_secret_admin_password"
+HASURA_GRAPHQL_ADMIN_SECRET = "mysupersecretkey"
 JWT_SECRET = "my_super_secret_key_that_is_at_least_32_chars"
 SUPABASE_URL = "https://jlwyiaxjugfzuvpiscez.supabase.co"
 SUPABASE_KEY = "<your supabase key>"
@@ -38,7 +38,7 @@ deploy {
   sleepApplication = false
 }
 [services.variables]
-HASURA_GRAPHQL_DATABASE_URL = "postgresql://postgres:<SUPABASE_PASSWORD>@db.inyvjefytsezzgwnuopy.supabase.co:5432/postgres"
-HASURA_GRAPHQL_ADMIN_SECRET = "your_super_secret_admin_password"
+HASURA_GRAPHQL_DATABASE_URL = "postgresql://postgres:lancetdbsupabasedb@db.inyvjefytsezzgwnuopy.supabase.co:5432/postgres"
+HASURA_GRAPHQL_ADMIN_SECRET = "mysupersecretkey"
 HASURA_GRAPHQL_UNAUTHORIZED_ROLE = "public"
 HASURA_GRAPHQL_ENABLED_LOG_TYPES = "startup,http-log,webhook-log,websocket-log,query-log"
