--- a/backend/docker/hasura/metadata/databases/databases.yaml
+++ b/backend/docker/hasura/metadata/databases/databases.yaml
@@ -21,14 +21,14 @@
       isolation_level: read-committed
       use_prepared_statements: false
   tables:
-    - "!include spatuladb/tables/public_bookmarks.yaml"
-    - "!include spatuladb/tables/public_categories.yaml"
-    - "!include spatuladb/tables/public_comments.yaml"
-    - "!include spatuladb/tables/public_ingredients.yaml"
-    - "!include spatuladb/tables/public_likes.yaml"
-    - "!include spatuladb/tables/public_purchases.yaml"
-    - "!include spatuladb/tables/public_ratings.yaml"
-    - "!include spatuladb/tables/public_recipe_images.yaml"
-    - "!include spatuladb/tables/public_recipes.yaml"
-    - "!include spatuladb/tables/public_steps.yaml"
-    - "!include spatuladb/tables/public_users.yaml"
+  - "spatuladb/tables/public_bookmarks.yaml"
+  - "spatuladb/tables/public_categories.yaml"
+  - "spatuladb/tables/public_comments.yaml"
+  - "spatuladb/tables/public_ingredients.yaml"
+  - "spatuladb/tables/public_likes.yaml"
+  - "spatuladb/tables/public_purchases.yaml"
+  - "spatuladb/tables/public_ratings.yaml"
+  - "spatuladb/tables/public_recipe_images.yaml"
+  - "spatuladb/tables/public_recipes.yaml"
+  - "spatuladb/tables/public_steps.yaml"
+  - "spatuladb/tables/public_users.yaml"
